--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qmenumodel (0.2.14~ubports1) xenial; urgency=medium
+
+  * No-change rebuild.
+
+ -- Rodney Dawes <dobey@ubports.com>  Mon, 11 Jan 2021 13:17:17 -0500
+
 qmenumodel (0.2.13+ubports1) xenial; urgency=medium
 
   [ Albert Astals Cid ]
